--- a/public/stylesheets/sass/_base.scss
+++ b/public/stylesheets/sass/_base.scss
@@ -37,7 +37,7 @@ body {
   font-weight: 400;
   font-size: 2rem;
   line-height: 1.6;
-  color: #ffe;
+  color: #fff;
   padding: 3rem;
   box-sizing: border-box;
   background-color: var(--color-blue-dark);
