--- a/public/stylesheets/sass/_components.scss
+++ b/public/stylesheets/sass/_components.scss
@@ -1,22 +1,54 @@
+.search{
+  grid-row: 4/5;
 .search-box {
-  grid-row: 1/2;
+  
   padding: 1.3rem 2rem;
   border: none;
-  display: block;
+  justify-self: center;
+   display: block;
   width: 150%;
   border-radius: 0.5rem;
-  transform: translateX(-15%);
 }
-.location {
-  .city {
-  }
-  .date {
-  }
 }
+/*
+.bg-video{
+  position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    opacity: 0.9;
+    overflow: hidden;
+}*/
+
 
 .temp {
+ 
+  grid-row: 1/2;
+  justify-self: center;
+ 
+  font-size: 10rem;
 }
+
+.now{
+  grid-row: 2/3;
 .weather {
+  
+  justify-self: center;
+  
+
 }
 .hi-low {
+  
+  justify-self: center;
+
+}
+
+.city {
+  justify-self: center;
+  align-content: center;
+  
+ 
+}
 }
