--- a/public/stylesheets/sass/_layout.scss
+++ b/public/stylesheets/sass/_layout.scss
@@ -1,11 +1,22 @@
 .app-wrap {
-  background-color: #000;
+  //<img src="/stylesheets/img/weather.gif" alt="weather" class='bg-video'>
   grid-column: 2/3;
-  grid-row: 2/3;
-  display: grid;
-  align-items: center;
-  justify-content: center;
-  height: 90vh;
+  background-image: url('/stylesheets/img/weather.gif');
+  
+ 
+  //grid-row: 2/3;
+  top:0;
+ // position: absolute;
+    height: 100%;
+    width: 100%;
+    opacity: 0.9;
+    overflow: hidden;
+    
 
-  grid-template-rows: 1fr 1fr 2fr 1fr 1fr;
+  display: grid;
+  justify-items: center;
+  height: 95vh;
+
+  grid-template-rows: 3fr 1fr 2fr 1fr 1fr;
 }
+
