--- a/public/stylesheets/sass/_layout.scss
+++ b/public/stylesheets/sass/_layout.scss
@@ -1,6 +1,8 @@
 .app-wrap {
   //<img src="/stylesheets/img/weather.gif" alt="weather" class='bg-video'>
   grid-column: 2/3;
+  border-radius: 0.8rem;
+  box-shadow: var(--shadow-dark);
   background-image: url('/stylesheets/img/weather.gif');
   
  
@@ -17,6 +19,37 @@
   justify-items: center;
   height: 95vh;
 
-  grid-template-rows: 3fr 1fr 2fr 1fr 1fr;
+  grid-template-rows: 3fr 2fr 3fr 2fr;
+
+  .temp{
+    font-size: 10rem;
+    grid-row: 1/2;
+    display: inline;
+    position: relative;
+    
+    &-temp{
+     
+    }
+    &-celsius{
+      top:3.6rem;
+      position: absolute;
+       font-size: 3rem;
+      
+    }
+  }
+
+  .now{
+    grid-row: 2/3;
+   // position: relative;
+    .city{
+      //position: absolute;
+      top:0;
+      text-transform: uppercase;
+      font-size: 2.5rem;
+    }
+    .weather{
+      //position:absolute;
+    }
+  }
 }
 
