--- a/views/result.ejs
+++ b/views/result.ejs
@@ -1,27 +1,35 @@
 <%-include("partials/header")%>
 <div class="app-wrap">
 
-
   <%if(error == null ){%>
 
+  <div class="temp">
+    <span class="temp-temp"><%=parseInt(data.main.temp -273)%></span>
+    <span class="temp-celsius">&#8451; </span>
+  </div>
 
-  <div class="temp"><%=parseInt(data.main.temp -273)%> <span>&#8451; </span>
-  </div>
   <div class="now">
-    <div class="weather"><%=data.weather[0].description%></div>
-    <div class="hi-low"><%=parseInt(data.main.temp_min -273)%>&#8451;/<%=parseInt(data.main.temp_max -273)%>&#8451;
+    <div class="city">
+      <%=data.name%>
     </div>
-    <div class="city"><%=data.name%></div>
+
+    <div class="weather">
+      <%=data.weather[0].description%>
+    </div>
   </div>
+
   <%}else{%>
-  <div class='city'><%=error%></div>
+  <div class='city'>
+    <%=error%>
+  </div>
   <%}%>
 
   <form action='/results' method='GET' class='search'>
-    <input type="text" name='city' autocomplete="off" class="search-box" placeholder="Search for a city....." />
-    <button class='btn' type="submit">Search</button></form>
+      <input type="text" name='city' autocomplete="off" class="search-box" placeholder="Search for a city....." />
+      <button class='btn' type="submit">Search</button>
+  </form>
 
-    </div>
+</div>
     <!--<script src="app.js"></script>-->
 
-    <%-include("partials/footer")%>
+<%-include("partials/footer")%>
