--- a/public/stylesheets/sass/_components.scss
+++ b/public/stylesheets/sass/_components.scss
@@ -1,15 +1,86 @@
-.search{
+.S{
   grid-row: 4/5;
-.search-box {
   
-  padding: 1.3rem 2rem;
-  border: none;
-  justify-self: center;
-   display: block;
-  width: 150%;
-  border-radius: 0.5rem;
+  &-search{
+   
+    width: 100%;
+    padding: 0px 10px;
+    height: 4rem;
+    display: grid;
+    grid-template-columns: 1fr 4fr 1fr 1fr;
+ 
+    &-box {
+      grid-column: 2/3;
+      padding:0 1.4rem;
+    
+      border: none;
+      border-radius: 5px;
+      height: 100%;
+      width: 90%;      
+    }
+    &-btn{
+      grid-column: 3/4;
+      border: none;
+      margin-top: 0.3rem;
+      width: 6rem;
+      border-radius: 1rem;
+      height: 80%;
+      background-color: var(--color-blue-light);
+      color: white;
+    }
+  }
 }
+
+.S1{
+  
+  grid-row: 1/2;
+  
+  
+
+  &-head{
+    
+    margin: 3rem ;
+    
+    @media only screen and (max-width: $bp-small) {
+      font-size: 1.6rem;
+      margin: 3rem 2.4rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+
+  &-search{
+   
+    width: 100%;
+    padding: 0px 10px;
+    height: 4rem;
+    display: grid;
+    grid-template-columns: 1fr 4fr 1fr 1fr;
+ 
+    &-box {
+      grid-column: 2/3;
+      padding:0 1.4rem;
+    
+      border: none;
+      border-radius: 5px;
+      height: 100%;
+      width: 90%;      
+    }
+    &-btn{
+      grid-column: 3/4;
+      border: none;
+      margin-top: 0.3rem;
+      width: 6rem;
+      border-radius: 1rem;
+      height: 80%;
+      background-color: var(--color-blue-light);
+      color: white;
+    }
+  }
 }
+
+
 /*
 .bg-video{
   position: absolute;
