--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -1,165 +1,1 @@
-:root {
-  --color-primary: #eb2f64;
-  --color-primary-light: #ff3366;
-  --color-primary-dark: #ba265d;
-  --color-grey-light-1: #faf9f9;
-  --color-grey-light-2: #f4f2f2;
-  --color-grey-light-3: #f0eeee;
-  --color-grey-light-4: #ccc;
-  --color-blue-dark:#0277BD;
-  --color-blue-dark-2:#00275a;
-  --color-blue-dark-1:#01579B;
-  --color-blue-light: #039be5;
-  --color-pink-dark: #e91e63;
-  --color-grey-dark-1: #333;
-  --color-grey-dark-2: #777;
-  --color-grey-dark-3: #999;
-  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.6);
-  --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
-  --line: 1px solid var(--color-grey-light-2); }
-
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit; }
-
-html {
-  font-size: 62.5%; }
-
-body {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 400;
-  font-size: 2rem;
-  line-height: 1.6;
-  color: #fff;
-  box-sizing: border-box;
-  background: linear-gradient(to right bottom, var(--color-blue-dark), var(--color-blue-dark-1)); }
-
-.container {
-  display: grid;
-  justify-content: center;
-  align-items: center;
-  grid-template-columns: auto 31.5rem min-content auto;
-  height: 100vh; }
-  @media only screen and (max-width: 25em) {
-    .container {
-      grid-template-columns: 1fr; } }
-
-.app {
-  grid-column: 2/3;
-  border-radius: 0.8rem;
-  box-shadow: var(--shadow-dark);
-  background-image: url("/stylesheets/img/weather.gif");
-  width: 100%;
-  opacity: 0.9;
-  overflow: hidden;
-  display: grid;
-  justify-items: center;
-  height: 95vh;
-  grid-template-rows: 15rem 10rem auto 12rem; }
-  @media only screen and (max-width: 25em) {
-    .app {
-      grid-columns: 1/2;
-      height: 100vh; } }
-  .app-temp {
-    font-size: 10rem;
-    grid-row: 1/2;
-    display: inline;
-    position: relative; }
-    .app-temp-celsius {
-      top: 3.6rem;
-      position: absolute;
-      font-size: 3rem; }
-  .app .now {
-    grid-row: 2/3; }
-    .app .now .city {
-      top: 0;
-      text-transform: uppercase;
-      font-size: 2.5rem;
-      display: flex;
-      flex-direction: row; }
-      .app .now .city-name {
-        text-transform: capitalize;
-        margin-left: 1rem; }
-    .app .now .weather {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: center; }
-      .app .now .weather-disc {
-        text-transform: capitalize;
-        margin-left: 1rem;
-        margin-bottom: .8rem; }
-
-.S {
-  grid-row: 4/5; }
-  .S-search {
-    width: 100%;
-    padding: 0px 10px;
-    height: 4rem;
-    display: grid;
-    grid-template-columns: 1fr 4fr 1fr 1fr; }
-    .S-search-box {
-      grid-column: 2/3;
-      padding: 0 1.4rem;
-      border: none;
-      border-radius: 5px;
-      height: 100%;
-      width: 90%; }
-    .S-search-btn {
-      grid-column: 3/4;
-      border: none;
-      margin-top: 0.3rem;
-      width: 6rem;
-      border-radius: 1rem;
-      height: 80%;
-      background-color: var(--color-blue-light);
-      color: white; }
-
-.S1 {
-  grid-row: 1/2; }
-  .S1-head {
-    margin: 3rem; }
-    @media only screen and (max-width: 25em) {
-      .S1-head {
-        font-size: 1.6rem;
-        margin: 3rem 2.4rem;
-        display: flex;
-        align-items: center;
-        justify-content: center; } }
-  .S1-search {
-    width: 100%;
-    padding: 0px 10px;
-    height: 4rem;
-    display: grid;
-    grid-template-columns: 1fr 4fr 1fr 1fr; }
-    .S1-search-box {
-      grid-column: 2/3;
-      padding: 0 1.4rem;
-      border: none;
-      border-radius: 5px;
-      height: 100%;
-      width: 90%; }
-    .S1-search-btn {
-      grid-column: 3/4;
-      border: none;
-      margin-top: 0.3rem;
-      width: 6rem;
-      border-radius: 1rem;
-      height: 80%;
-      background-color: var(--color-blue-light);
-      color: white; }
-
-/*
-.bg-video{
-  position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    z-index: -1;
-    opacity: 0.9;
-    overflow: hidden;
-}*/
+:root{--color-grey-light-1: #faf9f9;--color-grey-light-2: #f4f2f2;--color-grey-light-3: #f0eeee;--color-grey-light-4: #ccc;--color-blue-dark:#0277BD;--color-blue-dark-2:#00275a;--color-blue-dark-1:#01579B;--color-blue-light: #039be5;--color-grey-dark-1: #333;--color-grey-dark-2: #777;--color-grey-dark-3: #999;--shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.6);--shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);--line: 1px solid var(--color-grey-light-2)}*,*::after,*::before{margin:0;padding:0;-webkit-box-sizing:inherit;box-sizing:inherit}html{font-size:62.5%}body{font-family:'Open Sans', sans-serif;font-weight:400;font-size:2rem;line-height:1.6;color:#fff;-webkit-box-sizing:border-box;box-sizing:border-box;background:-webkit-gradient(linear, left top, right bottom, from(var(--color-blue-dark)), to(var(--color-blue-dark-1)));background:linear-gradient(to right bottom, var(--color-blue-dark), var(--color-blue-dark-1))}.container{display:grid;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;grid-template-columns:auto 31.5rem -webkit-min-content auto;grid-template-columns:auto 31.5rem min-content auto;height:100vh}@media only screen and (max-width: 25em){.container{grid-template-columns:1fr}}.app{grid-column:2/3;border-radius:0.8rem;-webkit-box-shadow:var(--shadow-dark);box-shadow:var(--shadow-dark);background-image:url("/stylesheets/img/weather.gif");width:100%;opacity:0.9;overflow:hidden;display:grid;justify-items:center;height:95vh;grid-template-rows:15rem 10rem auto 12rem}@media only screen and (max-width: 25em){.app{grid-columns:1/2;height:100vh}}.app-temp{font-size:10rem;grid-row:1/2;display:inline;position:relative}.app-temp-celsius{top:3.6rem;position:absolute;font-size:3rem}.app .now{grid-row:2/3}.app .now .city{top:0;text-transform:uppercase;font-size:2.5rem;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row}.app .now .city-name{text-transform:capitalize;margin-left:1rem}.app .now .weather{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}.app .now .weather-disc{text-transform:capitalize;margin-left:1rem;margin-bottom:.8rem}.S{grid-row:4/5}.S-search{width:100%;padding:0px 10px;height:4rem;display:grid;grid-template-columns:1fr 4fr 1fr 1fr}.S-search-box{grid-column:2/3;padding:0 1.4rem;border:none;border-radius:5px;height:100%;width:90%}.S-search-btn{grid-column:3/4;border:none;margin-top:0.3rem;width:6rem;border-radius:1rem;height:80%;background-color:var(--color-blue-light);color:white}.S1{grid-row:1/2}.S1-head{margin:3rem;font-weight:400}@media only screen and (max-width: 25em){.S1-head{font-size:1.6rem;margin:3rem 2.4rem;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}}.S1-search{width:100%;padding:0px 10px;height:4rem;display:grid;grid-template-columns:1fr 4fr 1fr 1fr}.S1-search-box{grid-column:2/3;padding:0 1.4rem;border:none;border-radius:5px;height:100%;width:90%}.S1-search-btn{grid-column:3/4;border:none;margin-top:0.3rem;width:6rem;border-radius:1rem;height:80%;background-color:var(--color-blue-light);color:white}
