--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,6 +7,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet" />
   <link rel="stylesheet" href="/stylesheets/css/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@500&display=swap" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
   <title>Weather App</title>
